--- a/src/style/Profile.css
+++ b/src/style/Profile.css
@@ -12,7 +12,8 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .profile::-webkit-scrollbar {
@@ -20,7 +21,8 @@
 }
 
 .profile__body {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .profile__body::-webkit-scrollbar {
